--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             <p class="projects__site-description">Адаптивный дизайн, быстрая загрузка, современная вёрстка.</p>
 
 
-                            <a href="/" class="btn">Перейти   ⟶</a>
+                            <a href="https://tashello.github.io/site-eco/" class="btn">Перейти   ⟶</a>
                         </div>
 
                         <div class="swiper-slide">
@@ -453,3 +453,4 @@
 
     </body>
 </html>
+
