--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <link rel="apple-touch-icon" href=".png"> -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/style.css">
+        <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+		<link rel="stylesheet" href="dist/style.min.css">
     </head>
 
     <body>
@@ -354,7 +355,8 @@
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-        <script src="assets/js/script.js"></script>
+        <!-- <script src="assets/js/script.js"></script> -->
+		<script src="dist/script.min.js"></script>
 
         <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
 
@@ -453,6 +455,7 @@
 
     </body>
 </html>
+
 
 
 
